[gd_scene load_steps=3 format=2]

[ext_resource path="res://CraftTable/craft-table-button.svg" type="Texture" id=1]
[ext_resource path="res://MyTextureButton.gd" type="Script" id=2]

[node name="MyTextureButton" type="TextureButton"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
hover_color = Color( 0.862745, 0.862745, 0.862745, 1 )
pressed_color = Color( 1, 1, 1, 0.501961 )
[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
